# democle

./: CMakeLists.txt  LICENSE  Makefile  README.md  condition.cpp  condition.h  context.cpp  context.h  democle.cpp  engine.cpp  engine.h  flexi_type.h  messaging.cpp  phidias.h  platformio.ini  sensor.cpp  sensor_lib.h  test.cpp  test_timer.cpp
lib/: CMakeLists.txt  agent.cpp  agent.h  democle.h  democle_types.h  engine.h  errors.h  flexi_type.cpp  goal.cpp  intention.h  predicates.h  sensor_lib.cpp  tsqueue.h
lib/democle/: CMakeLists.txt  agent.cpp  agent.h  binary_stream.h  context.cpp  context.h  context_collector.cpp  context_collector.h  debug.h  democle.cpp  democle.h  democle_types.cpp  democle_types.h  engine.cpp  engine.h  errors.h  goal.h  intention.h  messaging.cpp  packet.cpp  packet.h  plan.cpp  plan.h  protocol.h  sensor.h  sensor_lib.cpp  sensor_lib.h  tcp_protocol.cpp  tsqueue.h  url.cpp  url.h
src/: main_pio.cpp
tests/: CMakeLists.txt  ping_pong.cmake  ping_pong.cpp  sieve.cmake  sieve.cpp  sieve_remote.cmake  sieve_remote.cpp  test.cmake  test.cpp  test_coins.cmake  test_coins.cpp  test_max.cmake  test_max.cpp  test_student.cmake  test_student.cpp  test_timer.cmake  test_timer.cpp  test_url.cmake  test_url.cpp
